[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menu/BgMainMenu.jpg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/ARIAL.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://FadeIn/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=5]
[ext_resource path="res://Menu/StartButton.gd" type="Script" id=6]
[ext_resource path="res://Menu/OptionButton.gd" type="Script" id=7]
[ext_resource path="res://Menu/ExitButton.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_char = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
extra_spacing_char = 10
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 1680.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.0117647, 0.584314, 0.756863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "MISSING ENTITY"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="MainMenu"]
margin_top = 59.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MainMenu/CenterRow"]
margin_right = 1680.0
margin_bottom = 861.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Start" type="Button" parent="MainMenu/CenterRow/Buttons"]
margin_top = 336.0
margin_right = 1680.0
margin_bottom = 396.0
rect_min_size = Vector2( 360, 60 )
custom_colors/font_color_hover = Color( 0.0117647, 0.584314, 0.756863, 1 )
custom_fonts/font = SubResource( 1 )
text = "INICIAR"
flat = true
align = 0
script = ExtResource( 6 )
scene_to_load = "res://Level/Level.tscn"

[node name="Option" type="Button" parent="MainMenu/CenterRow/Buttons"]
margin_top = 400.0
margin_right = 1680.0
margin_bottom = 460.0
rect_min_size = Vector2( 360, 60 )
custom_colors/font_color_hover = Color( 0.0117647, 0.584314, 0.756863, 1 )
custom_fonts/font = SubResource( 2 )
text = "OPCIONES"
flat = true
align = 0
script = ExtResource( 7 )
scene_to_load = "res://Menu/Options/Options.tscn"

[node name="Exit" type="Button" parent="MainMenu/CenterRow/Buttons"]
margin_top = 464.0
margin_right = 1680.0
margin_bottom = 524.0
rect_min_size = Vector2( 360, 60 )
custom_colors/font_color_hover = Color( 0.0117647, 0.584314, 0.756863, 1 )
custom_fonts/font = SubResource( 3 )
text = "SALIR"
flat = true
align = 0
script = ExtResource( 8 )
scene_to_load = "exit"

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
